# treasure-chest

./: README.md  index.html  package-lock.json  package.json  project_rules.md  treasure-chest.desktop
desktop/: treasure-chest.desktop
openspec/: project.md
openspec/changes/add-nexus-nxm-protocol/: design.md  proposal.md  tasks.md
openspec/changes/add-nexus-nxm-protocol/specs/download-manager/: spec.md
openspec/changes/add-nexus-nxm-protocol/specs/mod-installation/: spec.md
openspec/changes/add-nexus-nxm-protocol/specs/nxm-protocol/: spec.md
openspec/changes/add-settings-management/: design.md  proposal.md  tasks.md
openspec/changes/add-settings-management/specs/app-settings/: spec.md
openspec/changes/add-settings-management/specs/user-preferences/: spec.md
openspec/changes/bulk-mod-actions/: proposal.md  tasks.md
openspec/changes/bulk-mod-actions/specs/bulk-actions/: spec.md
openspec/changes/check-for-updates/: proposal.md  tasks.md
openspec/changes/check-for-updates/specs/mod-updates/: spec.md
openspec/changes/enable-disable-mods/: proposal.md  tasks.md
openspec/changes/enable-disable-mods/specs/mod-management/: spec.md
openspec/changes/enhance-mod-list-ui/: proposal.md  tasks.md
openspec/changes/enhance-mod-list-ui/specs/filtering/: spec.md
openspec/changes/enhance-mod-list-ui/specs/pagination/: spec.md
openspec/changes/enhance-mod-list-ui/specs/sorting/: spec.md
openspec/changes/improve-delete-functionality/: proposal.md  tasks.md
openspec/changes/improve-mod-management/: design.md  proposal.md  tasks.md
reference/: generated-page (1).html
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api_usage_tracker.rs  download_manager.rs  lib.rs  main.rs  mod_installer.rs  models.rs  nxm_protocol.rs  settings.rs
src/components/features/downloads/: DownloadItem.tsx  DownloadManager.tsx
src/components/features/mods/: AddModModal.tsx  ModList.tsx
src/components/features/settings/: SettingsModal.tsx
src/components/layout/: Footer.tsx  Header.tsx  Toolbar.tsx
src/components/ui/: Checkbox.tsx  ConfirmDialog.tsx  NexusLogo.tsx  Select.tsx  Toast.tsx
src/data/: mock.ts
src/hooks/: useDownloads.ts  useToast.ts
src/types/: apiUsage.ts  download.ts  mod.ts  nxm.ts  settings.ts
(+5 files in other folders)
