[package]
name = "sdv-mods-manager"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[type]
"custom" = "lib"

[lib]
name = "sdv_mods_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2.5.0"
uuid = { version = "1.11.0", features = ["v4"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls", "stream"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
zip = "0.6"
url = "2"
regex = "1"
semver = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58.0", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(target_os = "macos")'.build-dependencies]
embed_plist = "1.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
